moved directories, dark/light modes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <link rel="stylesheet" type="text/css" href="./static/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="./static/css/style.css">
+  <link rel="shortcut icon" type="image/svg" href="./static/images/terminal.svg">
+  <title>Namho Kim</title>
 </head>
 <body>
   <div id="container">
     <h1>Namho Kim</h1>
     <h2>Site Reliability Engineer</h2>
     <br>
-    <p><a href="https://git.sr.ht/~namho">repos</a> * 
+    <p><a href="https://git.sr.ht/~namho">code</a> * 
     <a href="./resume">resume</a> * 
     <a href="mailto:contact@namho.kim">contact</a>
     </p>
