consistency with refs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Namho Kim</h1>
     <h2>Site Reliability Engineer</h2>
     <br>
-    <p><a href="https://git.sr.ht/~namho">code</a> * 
+    <p><a href="./code">code</a> * 
     <a href="./resume">resume</a> * 
     <a href="mailto:contact@namho.kim">contact</a>
     </p>
